<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="67dp"
        android:layout_height="88dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="0"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="67dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="0"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="67dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="0"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text4"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="67dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="0"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="67dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="0"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/UP1"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/UpBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UP5"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/UpBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/UP3"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/UpBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintEnd_toStartOf="@+id/UP4"
        app:layout_constraintStart_toEndOf="@+id/UP2" />

    <Button
        android:id="@+id/UP2"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/UpBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintStart_toEndOf="@+id/UP1" />

    <Button
        android:id="@+id/UP4"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/UpBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text4"
        app:layout_constraintEnd_toStartOf="@+id/UP5"
        android:gravity="center" />

    <Button
        android:id="@+id/DOWN1"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/DownBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Button
        android:id="@+id/DOWN2"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/DownBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/DOWN1"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <Button
        android:id="@+id/DOWN3"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/DownBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/DOWN4"
        app:layout_constraintStart_toEndOf="@+id/DOWN2"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <Button
        android:id="@+id/DOWN4"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/DownBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/DOWN5"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <Button
        android:id="@+id/DOWN5"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:text="@string/DownBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text5" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="385dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/EnterBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOWN3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/IMAGE1"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/UP1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loh" />

    <ImageView
        android:id="@+id/IMAGE2"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/UP2"
        app:layout_constraintStart_toEndOf="@+id/IMAGE1"
        app:srcCompat="@drawable/loh" />

    <ImageView
        android:id="@+id/IMAGE3"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/UP3"
        app:layout_constraintEnd_toStartOf="@+id/IMAGE4"
        app:layout_constraintStart_toEndOf="@+id/IMAGE2"
        app:srcCompat="@drawable/loh" />

    <ImageView
        android:id="@+id/IMAGE4"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/UP4"
        app:layout_constraintEnd_toStartOf="@+id/IMAGE5"
        app:srcCompat="@drawable/loh" />

    <ImageView
        android:id="@+id/IMAGE5"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/UP5"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/loh" />

    <ImageView
        android:id="@+id/LockImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/IMAGE3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock" />

    <TextView
        android:id="@+id/Try"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="78dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text6" />

    <TextView
        android:id="@+id/text"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/Try"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/Time"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>